fdo#33091 recognise General format in all languages

As opposed to only the current UI language

Change-Id: Iaaaec78e9cbe1891c3e42f207a6da552b2a2bf7d